load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "npm_package")

ts_library(
    name = "angular",
    srcs = glob(["*.ts"]),
    tsconfig = "//src:tsconfig-base",
    visibility = ["//visibility:public"],
    deps = [
        "//src/share",
        "@npm//@angular/core",
        "@npm//@storybook/addons",
    ],
)

[
    rollup_bundle(
        name = "bundle.%s" % format,
        config_file = "//:rollup.config.js",
        entry_points = {
                ":angular.public-api": "withPseudo.%s" % format,
            },
        format = format,
        sourcemap = "inline",
        deps = [
            ":angular",
        ],
    )
    for format in [
        "cjs",
        "umd",
        "amd",
        "esm",
        "iife",
        "system",
    ]
]

rollup_bundle(
    name = "bundle_all",
    config_file = "rollup-angular.config.js",
    entry_points = {
        "public-api": "withPseudo_ts",
    },
    sourcemap = "inline",
    deps = [
        "//src/angular",
    ],
)

npm_package(
    name = "packr",
    srcs = [
        "README.md",
        "package.json",
    ],
    deps = [
        ":bundle.cjs",
        ":bundle.esm",
        ":bundle.amd",
        ":bundle.iife",
        ":bundle.system",
    ],
)
