load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "npm_package")

ts_library(
    name = "angular",
    srcs = glob([
        #        "public-api.ts",
        "angular.ts",
        "PseudoStateWrapperComponents.ts",
    ]),
    #    tsconfig = "//src:tsconfig-base",
    visibility = ["//visibility:public"],
    deps = [
        "//src/share",
        #        "//src/register",
        "@npm//@angular/core",
        "@npm//@storybook/addons",
    ],
)

filegroup(
    name = "js_out",
    srcs = ["angular"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es6_sources",
)

#genrule(
#    name = "public_api_file",
#)

ts_library(
    name = "public_api",
    srcs = glob(["public-api.ts"]),
    #    tsconfig = "//src:tsconfig-base",
    visibility = ["//visibility:public"],
    deps = [
        ":angular",
        "//src/register",
    ],
)

filegroup(
    name = "public-api.js",
    srcs = ["public_api"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es5_sources",
)
filegroup(
    name = "public-api.d.ts",
    srcs = ["public_api"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es5_sources",
)

#ts_library(
#    name = "lib",
#    srcs = glob(["public-api.ts"]),
#    tsconfig = "//src:tsconfig-base",
#    visibility = ["//visibility:public"],
#    deps = [
#        ":angular",
#        "//src/register",
#    ],
#)

#filegroup(
#    name = "lib.js",
#    srcs = ["lib"],
#    # Change to es6_sources to get the 'prodmode' JS
#    output_group = "es5_sources",
#)

[
    rollup_bundle(
        name = "bundle.%s" % format,
        srcs = [
            ":angular",
            "//src/register",
        ],
        config_file = "//:rollup.config.js",
        entry_points = {
            "public-api.ts": "withPseudo.%s" % format,
        },
        format = format,
        output_dir = False,
        sourcemap = "inline",
        deps = [
            ":angular",
            ":public_api",
#            "public-api.d.ts",
#            "public-api.js",
            "@npm//@wessberg/rollup-plugin-ts",
            "@npm//rollup-plugin-dts",
            "@npm//@angular/core",
            "@npm//@storybook/addons",
            "@npm//@storybook/api",
            "@npm//@storybook/components",
            "@npm//react"
        ],
    )
    for format in [
        "cjs",
        "umd",
        "amd",
        "esm",
        "iife",
        "system",
    ]
]

npm_package(
    name = "packr",
    srcs = [
        "README.md",
        "package.json",
    ],
    deps = [
#        ":bundle.cjs",
         ":bundle.esm",
#        ":bundle.amd",
#        ":bundle.iife",
#        ":bundle.system"

    ],
)

