load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

ts_library(
    name = "register",
    srcs = glob([
        "register.tsx",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/share",
        "@npm//@storybook/addons",
        "@npm//@types/react",
    ],
)

rollup_bundle(
    name = "bundle",
    config_file = "//:rollup.config.js",
    entry_points = {
        ":register.tsx": "register-bdnl",
    },
    visibility = ["//visibility:public"],
    deps = [":register"],
)
