load("@npm_bazel_typescript//:index.bzl", "ts_library")


ts_library(
    name="share",
    visibility = ["//visibility:public"],
    srcs = glob(["*.ts", "*.tsx"]),
     deps = [
        "@npm//@types/react",
        "@npm//@storybook/addons",
        "@npm//@storybook/core-events",
        "@npm//@storybook/components",
        "@npm//@storybook/api",
     ]
)

ts_library(
    name = "html",
    srcs = glob(["html.ts", "html/**/*.ts"]),
    deps = [
        ":share",
        "@npm//@types",
        "@npm//@types/node",
        "@npm//@storybook/addons"
    ]
)
